Release 3.5.11
==============

Bugs fixed
----------

- The default converter for R magic was dropping R factors
  to :mod:`numpy` arrays of integers rather than convert them
  to pandas :class:`Category` (issue #1010).

Changes
-------

- The fix for issue #1010 (see above) changes the numpy conversion
  for R factors. It return an arrays with the level factors rather
  than the integer codes for the levels.


Release 3.5.10
==============

New features
------------

- :mod:`rpy2.situation` reports cffi interface type information.

- The ipython/jupyter R magic can now have `jpeg` as a default graphics format
  for static figures in addition to `png` and `svg`.

Bugs fixed
----------

- Building the path to the R shared library was incorrectly
  using the output of `R CMD config LIBnn` (issue #982).

- R started raising warnings when calling `formals` on `BUILTINSXP` R objects.
  Internal functions in :mod:`rpy.robjects.functions` calling `formals` no
  longer propagate the warnings.


Release 3.5.9
=============

New features
------------

- Type hints in :mod:`rpy2` are now checked with `mypy`.

Bugs fixed
----------

- Building the path to the R shared library was incorrectly
  using the output of `R CMD config LIBnn` (issue #982).

- R started raising warnings when calling `formals` on `SPECIALSXP` R objects.
  Internal functions :mod:`rpy.robjects.functions` calling `formals` no longer
  propagate the warnings.
  
- The :mod:`numpy` converter was not turning `NA_character_` into
  `None` (issue #979).

- :mod:`rpy2.situation` included an eager `import rpy2` that could cause a version
   mismatch error with some build/install toolchain (issue #984). The import is now
   lazy/delayed.

- Installation targets `pandas`, `all`, and `test` now specify `pandas>=1.2.0`
  (which should limit frequencies of issues like #998).

Changes
-------

- :class:`rpy2.robjects.conversion.Converter` objects are no longer functioning context